プロフィールの課題を再提出

--- a/profile/index.html
+++ b/profile/index.html
@@ -1,4 +1,8 @@
+<!DOCTYPE html>
 <html>
+<head>
+    <title>自己紹介</title>
+</head>
 <body>
     <h1>自己紹介</h1>
     <h1>氏名</h1>
@@ -9,6 +13,5 @@
         <li>犬と遊ぶこと</li>
     </ul>
     <img src="img/inu.png" alt="いぬ">
-
 </body>
 </html>
