プロフィールの課題を提出

--- a/profile/index.html
+++ b/profile/index.html
@@ -12,6 +12,6 @@
         <li>寝ること</li>
         <li>犬と遊ぶこと</li>
     </ul>
-    <img src="img/inu.png" alt="いぬ">
+    <img src="img/inu.png" alt="犬">
 </body>
 </html>
