--- a/profile/index.html
+++ b/profile/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>自己紹介</title>
+    <link rel="stylesheet" href="profile-style.css">
 </head>
+
 <body>
-    <h1>自己紹介</h1>
+    <div class="bg-violet">
+        <h1>自己紹介</h1>
+    </div>
     <h1>氏名</h1>
     <p>畠山怜哉</p>
     <h1>趣味・好きなこと</h1>
     <ul>
-        <li>寝ること</li>
-        <li>犬と遊ぶこと</li>
+        <li class="text-brown">寝ること</li>
+        <li>犬と<span>遊ぶこと</span></li>
     </ul>
     <img src="img/inu.png" alt="犬">
 </body>
+
 </html>
