プロフィール装飾課題を提出

--- a/profile/index.html
+++ b/profile/index.html
@@ -14,7 +14,7 @@
     <p>畠山怜哉</p>
     <h1>趣味・好きなこと</h1>
     <ul>
-        <li class="text-brown">寝ること</li>
+        <li class="text-blue">寝ること</li>
         <li>犬と<span>遊ぶこと</span></li>
     </ul>
     <img src="img/inu.png" alt="犬">
