フォームの課題提出

--- a/form/form.html
+++ b/form/form.html
@@ -31,7 +31,7 @@
             英数字8文字以上で入力してください。<br>
             <label><input type="password" name="password"></label><br>
             確認のためもう一度入力してください。<br>
-            <label><input type="password_comfirm" name="password"></label><br>
+            <label><input type="password" name="password_comfirm"></label><br>
         </fieldset>
 
         <fieldset>
