--- a/form/register.html
+++ b/form/register.html
@@ -10,46 +10,73 @@
 
 <body>
     <form action="#" method="get" enctype="multipart/form-data"></form>
-    <p>必須事項を入力の上送信ボタンを押して下さい。</p><br>
-    ID <span>必須</span>（メールアドレス）<input type="email" name="user_email" size="30" value="dfbf@fefe.ac.jp"><br>
+    <p>必須事項を入力の上送信ボタンを押して下さい。</p>
+    <table>
+        <tr>
+            <th>ID <span>必須</span>(メールアドレス)</th>
+            <td><input type="email" name="user_email" size="30" value="例： mori@jyobi.ac.jp"></td>
+        </tr><br>
 
-    パスワード <span>必須</span>（半角英数字8文字以上）<label><input type="password" name="user_password" size="30" maxlength="8" required></label>
-    <label><input type="checkbox" name="ok">パスワードを表示する</label><br>
+        <tr>
+            <th>パスワード <span>必須</span>(半角英数字8文字以上)</th>
+            <td><label><input type="password" name="user_password" size="30" maxlength="8" required></label>
+                <label><input type="checkbox" name="ok">パスワードを表示する</label>
+            </td>
+        </tr><br>
 
-    氏名 <span>必須</span> 姓<input type="text" name="sei" value="盛岡" required>
+        <tr>
+            <th>氏名<span>必須</span></th>
+            <td>姓：<input type="text" name="sei" value="例：盛岡" required>
 
-    名<input type="text" name="mei" value="太郎" required><br>
+                名：<input type="text" name="mei" value="例：太郎" required></td>
+        </tr><br>
 
-    住所〒<input type="text" size="8" disabled value="020-0021">
-    <input type="text" name="住所" disabled value="岩手県盛岡市中央通り3丁目"><br>
-    <input type="text" name="番地" value="番地">
-    <input type="text" name="建物名" size="30" value="建物名"><br>
+        <tr>
+            <th>住所</th>
+            <td>〒<input type="text" size="8" disabled value="020-0021"><br>
+                <input type="text" name="住所" disabled value="岩手県盛岡市中央通り3丁目"><br>
+                <input type="text" name="番地" value="番地"><br>
+                <input type="text" name="建物名" size="30" value="建物名"><br>
+            </td>
+        </tr><br>
+        <tr>
+            <th>携帯電話番号 <span>必須</span>(ハイフンなし)</th>
+            <td><input type="tel" name="tel"></td>
+        </tr><br>
 
-    携帯電話番号 <span>必須</span>（ハイフンなし）
-    <input type="tel" name="tel"><br>
+        <tr>
+            <th>学科・学年 <span>必須</span></th>
+            <td>学科：
+                <select name="blood_type" required>
+                    <option value="">学科を選択してください</option>
+                    <option value="sisutemu">システム科</option>
+                    <option value="bijinesu">ビジネス科</option>
+                    <option value="dezain">デザイン科</option>
+                </select>
+                学年：
+                <select name="blood_type" required>
+                    <option value="">学年を選択してください</option>
+                    <option value="1">1年</option>
+                    <option value="2">2年</option>
+                    <option value="3">3年</option>
+                    <option value="4">4年</option>
+                </select>
+            </td>
+        </tr><br>
 
-    学科・学年 <span>必須</span>
-    学科：
-    <select name="blood_type" required>
-        <option value="">学科を選択してください</option>
-        <option value="sisutemu">システム科</option>
-        <option value="bijinesu">ビジネス科</option>
-        <option value="dezain">デザイン科</option>
-    </select>
-    学年：
-    <select name="blood_type" required>
-        <option value="">学年を選択してください</option>
-        <option value="1">1年</option>
-        <option value="2">2年</option>
-        <option value="3">3年</option>
-        <option value="4">4年</option>
-    </select><br>
+        <tr>
+            <th>お得な情報クーポン <span>必須</span></th>
+            <td><input type="radio" name="" value="" required>受け取る
+                <input type="radio" name="" value="">受け取らない
+            </td>
+        </tr><br>
 
-    お得な情報クーポン <span>必須</span><input type="radio" name="" value="" required>受け取る
-    <input type="radio" name="" value="">受け取らない<br>
-
-    ご意見・ご要望（200字以内でご記入ください）<textarea name="multipiple" cols="50" rows="10" maxlength="200"></textarea><br>
-    <button type="reset">送信内容をリセット</button>
+        <tr>
+            <th>ご意見・ご要望（200字以内でご記入ください）</th>
+            <td><textarea name="multipiple" cols="50" rows="10" maxlength="200"></textarea></td>
+        </tr><br>
+    </table>
+    <button type="reset">入力内容をリセットする</button>
     <button type="submit">送信</button>
 
 </body>
