フォームの課題２

--- a/form/register.html
+++ b/form/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>登録フォーム</title>
     <link rel="stylesheet" href="register-style.css">
 </head>
 
@@ -28,7 +28,7 @@
                 <th>氏名<span>必須</span></th>
                 <td>姓：<input type="text" name="sei" placeholder="例：盛岡" required>
 
-                    名：<input type="text" name="mei" placeholder="例：太郎" required></td>
+                    名：<input type="text" name="mei" placeholder="例：太郎" required></td>l
             </tr><br>
 
             <tr>
