中間課題の提出

--- a/midtermAssignment/company/co-top.html
+++ b/midtermAssignment/company/co-top.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>大学</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/co-style.css">
     <link rel="icon" href="../img/favicon.jpg">
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../it/it-top.html">ITの歴史</a></li>
-                <li><a href="../company/co-top.html">気になる企業</a></li>
+                <li><a href="../company/co-top.html">気になる大学</a></li>
                 <li><a href="../news/news-top.html">気になるニュース</a></li>
                 <li><a href="../self-introduction/self-introduction.html">自己紹介</a></li>
 
@@ -39,6 +39,7 @@
         コンピュータの仕組みや動作原理、計算の理論的な限界、ネットワークの仕組み、セキュリティの基礎理論、人工知能などを専門的に学び、未来に役立つソフトウェア技術の開発を目指す人を育成するような学部。
         </p>
     </main>
+    <li><a href="../company/co-top.html">topに戻る</a></li>
 </body>
 
 </html>
