--- a/midtermAssignment/it/it-top.html
+++ b/midtermAssignment/it/it-top.html
@@ -7,7 +7,7 @@
     <title>it</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../img/favicon.jpg">
-    
+
 </head>
 
 <body>
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="#">ITの歴史</a></li>
-                <li><a href="../company/co-top.html">気になる企業</a></li>
+                <li><a href="../company/co-top.html">気になる大学</a></li>
                 <li><a href="../news/news-top.html">気になるニュース</a></li>
                 <li><a href="../self-introduction/self-introduction.html">自己紹介</a></li>
             </ul>
@@ -35,9 +35,9 @@
         <img src="it.img/kamera.png" alt="kamera">
         <li><a href="mobilephone.html">携帯電話の歴史</a></li>
         <li><a href="PC.html">PCの歴史</a></li>
-        
-    </main>
 
+    </main>
+    <li><a href="../it/it-top.html">topに戻る</a></li>
 
 </body>
 
