--- a/midtermAssignment/setumei.html
+++ b/midtermAssignment/setumei.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>説明ページ</title>
-    <link rel="icon" href="../img/favicon.jpg">
+    <link rel="icon" href="img/favicon.jpg">
 </head>
 
 <body>
@@ -23,8 +23,11 @@
         <p>PC.htmlとmobilephone.htmlでsampを使ってます。39行目付近です。</p>
         <li>背景の設定</li>
         <p>self-introduction.htmlで背景を設定しています。</p>
+        <li>ページ内遷移</li>
+        <p>全てのページに適用しました</p>
     </ul>
-    <a href="index.html">topに戻る</a>
+    <a href="index.html">戻る</a>
+    <li><a href="setumei.html">topに戻る</a></li>
 </body>
 
 </html>
