--- a/midtermAssignment/index.html
+++ b/midtermAssignment/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webデザイン 中間課題</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="../img/favicon.jpg">
+    <link rel="icon" href="img/favicon.jpg">
 </head>
 <body>
     Webデザイン 中間課題
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="it/it-top.html">ITの歴史</a></li>
-            <li><a href="company/co-top.html">気になる企業</a></li>
+            <li><a href="company/co-top.html">気になる大学</a></li>
             <li><a href="news/news-top.html">気になるニュース</a></li>
             <li><a href="self-introduction/self-introduction.html">自己紹介</a></li>
 
@@ -27,6 +27,7 @@
 <main>
     <p>
         <li><a href="setumei.html">説明ページ</a></li>
+        <li><a href="index.html">topに戻る</a></li>
 
     </p>
 </main>
