--- a/midtermAssignment/it/mobilephone.html
+++ b/midtermAssignment/it/mobilephone.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../it/it-top.html">ITの歴史</a></li>
-                <li><a href="../company/co-top.html">気になる企業</a></li>
+                <li><a href="../company/co-top.html">気になる大学</a></li>
                 <li><a href="../news/news-top.html">気になるニュース</a></li>
                 <li><a href="../self-introduction/self-introduction.html">自己紹介</a></li>
             </ul>
@@ -109,6 +109,7 @@
         </table>
 
     </main>
+    <li><a href="../it/mobilephone.html">topに戻る</a></li>
 </body>
 
 </html>
