--- a/midtermAssignment/self-introduction/self-introduction.html
+++ b/midtermAssignment/self-introduction/self-introduction.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../it/it-top.html">ITの歴史</a></li>
-                <li><a href="../company/co-top.html">気になる企業</a></li>
+                <li><a href="../company/co-top.html">気になる大学</a></li>
                 <li><a href="../news/news-top.html">気になるニュース</a></li>
                 <li><a href="#">自己紹介</a></li>
     
@@ -59,6 +59,7 @@
         <li class="A">私のオススメはコールドシャワーです。
             冷たい水を浴びるので眠気がとんでスッキリした一日が過ごせます。</li>
     </ul>
+    <li><a href="../self-introduction/self-introduction.html">topに戻る</a></li>
 </body>
 
 </html>
